# AKA

./: LICENSE  README.md
fbla/: Contacts.db  info.md
src/: CMakeLists.txt  \  ]  compile_commands.json  config.c  config.h  conoptions.c  conoptions.h  contactwindow.h  database.c  database.h  gui.c  gui.h  help.c  help.h  main.c  mainwindow.h  rgx.c  rgx.h
src/help/: actions  addressexplained  backups  contactinformation  creatingacontact  deletingacontact  editingacontact  emailexplained  extraexplained  faq  makingabackup  nameexplained  openingabackup  orgexplained  phonenumberexplained  titleexplained  websiteexplained
src/old/: main.c  mainwindow.h  newcontactwindow.h  windowmake.h
